--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
@@ -7,9 +7,11 @@
   <script src="main.js"></script>
 </head>
 <body>
-  <input type='text' id='txtName' />
-  <textarea name="" id="msg" cols="30" rows="4"></textarea>
+  <input type='text' id='txtName' value='問' />
+  <br />
+  解答<br />
+  <textarea name="" id="msg" cols="30" rows="10"></textarea>
   <button name="button" onClick="clickEvent()">send message!</button>
-  <ul id="board"></ul>
+  <div id="board"></div>
 </body>
 </html>
